 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.9rc2

 - [ZBX-4352] fixed template linking when mass updating hosts (pavels,Vedmak)
 - [ZBX-4360] fixed trapper compilation error on FreeBSD 7.3 (dimir,asaveljevs)

Changes for 1.8.9rc1

 - [ZBX-4325] fixed maintenance periods saved with nonzero seconds (asaveljevs,Vedmak)
 - [ZBX-4345] fixed counting of recursive dependency levels for triggers (asaveljevs)
 - [ZBX-4027] fixed floating-point comparison and unified epsilon in trigger functions and expressions (asaveljevs)
 - [ZBX-3551] fixed image XML export for Postgres (pavels)
 - [ZBX-3625] fixed validation of aggregated item keys (Sasha)
 - [ZBX-3117] fixed error notification when unsuccessfully copying a graph (pavels)
 - [ZBX-4326] API now returns error when trying to create incorrect host profile field (Vedmak)
 - [ZBX-4323] fixed host profile not created with host using API (Vedmak)
 - [ZBX-4275] made server and proxy try to reconnect to the database upon startup (asaveljevs)
 - [ZBX-4159] fixed problem with generating new ids for historical tables (Vedmak)
 - [ZBX-3988] fixed memory leak in dashboard (Vedmak)
 - [ZBX-3498] removed items from unmonitored hosts from the 'Add graph' and 'Add simple graph' pop-ups in the 'Favourite graphs' widget (pavels)
 - [ZBX-3498] removed the 'Status' column from the 'Add simple graph' pop-up (pavels)
 - [ZBX-2919] fixed custom multiplier becoming 0 when creating an item (pavels)
 - [ZBX-3074] moved the 'Status' column in the item list to the left (pavels)
 - [ZBX-2504] replaced 'Groups' by 'Replace host groups' in host mass-update form to avoid confusion (Alexei)