@@ -26,9 +26,21 @@ $regExpForm->setName('regularExpressionsForm');
 $regExpForm->addVar('config', get_request('config', 10));
 $regExpForm->addItem(BR());
 
+$goBox = new CComboBox('go');
+
+$goOption = new CComboItem('delete', _('Delete selected'));
+$goOption->setAttribute('confirm', _('Delete selected regular expressions?'));
+
+$goBox->addItem($goOption);
+
+$goButton = new CButton('goButton', S_GO, 'if(chkbxRange.pageGoCount>0) submit();');
+$goButton->setAttribute('id', 'goButton');
+
+zbx_add_post_js('chkbxRange.pageGoName = "regexpids";');
+
 $regExpTable = new CTableInfo();
 $regExpTable->setHeader(array(new CCheckBox('all_regexps', null, "checkAll('regularExpressionsForm','all_regexps','regexpids');"), _('Name'), _('Expressions')));
-$regExpTable->setFooter(new CCol(array(new CButtonQMessage('delete', _('Delete selected'), _('Delete selected regular expressions?')))));
+$regExpTable->setFooter(new CCol(array($goBox, $goButton)));
 
 $expressions = array();
 $values = array();
